[tool.poetry]
name = "codeforces_problems_daily_update"
version = "0.1.0"
description = ""
authors = ["kfess"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
